Details
-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.5.4
-
-
dd1d51a5c (dev), b04f18195 (6.7), 2edc95866 (6.6), 743278187 (tqtc/lts-6.5)
-
2024wk08FOQtforAndroid
Description
Description:-
In the QML Video example, the application crashes when attempting to play two videos simultaneously in "Multi" mode.
Logs:
I OMXClient: IOmx service obtained D MediaCodec: flushMediametrics D SurfaceUtils: connecting to surface 0x74a17df010, reason connectToSurface E BufferQueueProducer: [SurfaceTexture-0-13560-0](id:34f800000008,api:3,p:13560,c:13560) connect: already connected (cur=3 req=3) E SurfaceUtils: Failed to connect to surface 0x74a17df010, err -22 E MediaCodec: nativeWindowConnect returned an error: Invalid argument (-22) E MediaCodec: configure failed with err 0xffffffea, resetting... I OMXClient: IOmx service obtained D qml : : [qmlvideo] VideoItem.onError error 2 errorString Cannot create codec,Failed to open FFmpeg codec context Generic error in an external library D qml : : [qmlvideo] Content.onFatalError D MediaCodec: flushMediametrics F libc : Fatal signal 11 (SIGSEGV), code 1 (SEGV_MAPERR), fault addr 0x30 in tid 13582 (qtMainLoopThrea), pid 13560 (xample.qmlvideo) D MediaCodec: flushMediametrics
Steps to Reproduce:
- Build and Run QML Video Example on Android.
- Select two videos as file1 and File2.
- Click "Multi" button under Video modes.
- Try to play both videos.
Expected Results: The QML Video example should support simultaneous playback of multiple videos without causing a crash.
Actual Results: The app crashes as soon as second video is played.
Take the reference from attached video.
Attachments
Issue Links
- is duplicated by
-
QTBUG-122649 Playing multiple videos simultaneously fails for the second video with the FFMPEG backend on Android.
-
- Closed
-
- relates to
-
QTQAINFRA-6069 Qt 6.5.4 LTS Testing
-
- Open
-