Android-FFMpeg: Dynamically create/remove AndroidSurfaceTexture

Before this change, MediaCodecTextureConverter used a single static
AndroidSurfaceTexture. When trying to play another video, currently used
Surface was trying to be reused. Because of that, more than one
simultaneous video playback caused the app to crash on Android.

Android surface textures need to be created dynamically, depending as
needed.

MediaCodecTextureConverter is created as a backend in TextureConverter
when the first frame from videoSink appears. At this point the Surface
is already created, set in the codecContext and used by FFmpeg.

Fixes: QTBUG-121182
Fixes: QTBUG-122649
Change-Id: Ie9845ac78d770e4c06b6046fc59c0afbd39fb14a
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>
(cherry picked from commit dd1d51a5c8cdc2bdd37493570e0481a618049280)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit b04f18195e8bd5428376b34d07dbe7f16847d1fe)
(cherry picked from commit 2edc958669a83d49930ad78b1bc54502f6475fc8)